Added Google Integration

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GdNPuntos",
+  "name": "gdn-puntos",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,11 +20,11 @@
   "homepage": "https://github.com/Deznait/GdNPuntos#readme",
   "dependencies": {
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "eslint": "^7.18.0",
+    "googleapis": "^39.2.0"
   },
   "devDependencies": {
-    "eslint": "^7.18.0",
-    "eslint-config-strongloop": "^2.1.0",
     "nodemon": "^2.0.7"
   }
 }
