--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Custom
+.credentials.json
+.token.json
+.config.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,vscode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,vscode
