--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.18.0",
-    "googleapis": "^39.2.0"
+    "google-spreadsheet": "^3.1.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
