--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "npm": "*"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon index.js",
     "start": "node index.js",
-    "pretest": "eslint --ignore-path .gitignore ."
+    "linter": "eslint --ignore-path .gitignore ."
   },
   "repository": {
     "type": "git",
