--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "12.x",
+    "node": "14.x",
     "npm": "*"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon index.js",
     "start": "node index.js",
     "linter": "eslint --ignore-path .gitignore ."
