--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.18.0",
-    "google-spreadsheet": "^3.1.15"
+    "google-spreadsheet": "^3.1.15",
+    "noderiowrapper": "^1.0.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
